<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/color_dark_gray"
    android:orientation="vertical"
    >

    <androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="515dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    app:cardCornerRadius="10dp"
        android:id="@+id/cardView">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tvBillAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="monospace"
                        android:letterSpacing="0.1"
                        android:padding="4dp"
                        android:text="@string/bill_amount"
                        android:textSize="20sp"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="15dp"/>

                <EditText
                    android:id="@+id/etAmount"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/tvBillAmount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/costom_background"
                    android:digits="0123456789."
                    android:drawableStart="@drawable/ruppee_logo"
                    android:drawablePadding="5dp"
                    android:ems="10"
                    android:focusableInTouchMode="true"
                    android:fontFamily="monospace"
                    android:hint="@string/amount"
                    android:inputType="numberDecimal"
                    android:paddingStart="10dp"
                    android:textColorHighlight="#00BFFF"
                    android:textColorHint="@color/hintcolor"
                    android:textSize="19sp"
                    tools:ignore="RtlSymmetry"
                    android:autofillHints="" />

                <TextView
                    android:id="@+id/tvTipAmount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:letterSpacing="0.1"
                    android:padding="4dp"
                    android:text="@string/tip_percent"
                    android:textSize="20sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="15dp"
                    android:layout_below="@id/etAmount"/>



                    <TextView
                        android:id="@+id/tipAmount"
                        android:layout_below="@id/tvTipAmount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_15"
                        android:fontFamily="monospace"
                        android:textSize="19sp"
                        android:padding="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_centerHorizontal="true"
                        />
                <TextView
                    android:id="@+id/percentText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/tipAmount"
                    android:layout_below="@id/tvTipAmount"
                    android:text="@string/percent"
                    android:fontFamily="monospace"
                    android:textSize="19sp"
                    android:padding="5dp"
                    android:layout_marginTop="5dp"
                    android:layout_centerHorizontal="true"

                    />


                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    android:layout_width="290dp"
                    android:layout_height="50dp"
                    android:layout_below="@id/tipAmount"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/costom_background"
                    android:contentDescription="@string/mahesh"
                    android:gravity="center"
                    android:valueFrom="0"
                    android:valueTo="50"
                    android:value="10"
                    app:thumbColor="#444C5D"
                    app:trackColor="#444C5D"
                    android:stepSize="1"
                    app:tickColor="@color/white"
                    android:padding="10dp"

                    />


                <TextView
                    android:id="@+id/textQuestion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/slider"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/roboto_mono"
                    android:padding="3dp"
                    android:text="@string/how_many_people_are_paying"
                    android:textSize="18sp"
                    android:letterSpacing="0.01"/>

                <LinearLayout
                    android:id="@+id/linearLayout1"
                    android:layout_width="290dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textQuestion"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/negBtn"
                        android:layout_width="53dp"
                        android:layout_height="53dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/circle_bg"
                        android:fontFamily="@font/roboto_mono"
                        android:padding="2dp"
                        android:text="@string/neg"
                        android:textColor="@color/textColor"
                        android:textSize="16sp"
                        android:enabled="false"/>

                    <TextView
                        android:id="@+id/personTv"
                        android:layout_width="0dp"
                        android:layout_height="53dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/circle_bg"
                        android:fontFamily="@font/roboto_mono"
                        android:padding="2dp"
                        android:text="@string/_1"
                        android:gravity="center"
                        android:layout_weight="2"
                        android:textColor="@color/textColor"
                        android:textSize="19sp" />

                    <Button
                        android:id="@+id/plusBtn"
                        android:layout_width="53dp"
                        android:layout_height="53dp"
                        android:layout_margin="3dp"
                        android:background="@drawable/circle_bg"
                        android:fontFamily="@font/roboto_mono"
                        android:padding="2dp"
                        android:text="@string/plus"
                        android:textColor="@color/textColor"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/calculateBtn"
                    android:layout_width="290dp"
                    android:layout_height="55dp"
                    android:layout_below="@id/linearLayout1"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="30dp"
                    android:backgroundTint="@color/bgColorBtn"
                    android:fontFamily="monospace"
                    android:letterSpacing="0.1"
                    android:text="@string/calculate"
                    android:textColor="@color/white"
                    android:textSize="19sp"
                    app:cornerRadius="8dp" />
            </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="8dp"
        >

        <TextView
            android:id="@+id/tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/tip"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/tip"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp"
            android:contentDescription="view">

            <TextView
                android:id="@+id/resultTv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="monospace"
                android:padding="3dp"
                android:text="@string/_0"
                android:textColor="@color/textColor1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_gravity="start"
                android:lines="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp" />
        </HorizontalScrollView>








        <TextView
            android:id="@+id/perPerson"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tip"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/person"
            android:textColor="@color/white"
            android:textSize="30sp" />


        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/perPerson"
            android:layout_below="@id/tip"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/view">

            <TextView
                android:id="@+id/perPersonAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="monospace"
                android:text="@string/_0p"
                android:textColor="@color/textColor1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="3dp"/>


        </HorizontalScrollView>



        <TextView
            android:id="@+id/total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/perPerson"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/roboto_mono"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_toEndOf="@id/total"
            android:layout_below="@id/perPerson"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/view">

            <TextView
                android:id="@+id/totalAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:fontFamily="monospace"
                android:text="@string/_0t"
                android:textColor="@color/textColor1"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:padding="3dp"
                />

        </HorizontalScrollView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
       >

        <ImageButton
            android:id="@+id/copyBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="copy"
            android:minHeight="48dp"
            android:src="@drawable/copy_btn"
            android:backgroundTint="#1BECEFF4"
            android:layout_marginEnd="5dp"/>

        <ImageButton
            android:id="@+id/shareBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="share"
            android:minHeight="48dp"
            android:src="@drawable/share_btn"
            android:backgroundTint="#1BECEFF4"
            android:layout_marginStart="5dp"/>
    </LinearLayout>


</LinearLayout>